<resources>
    <string name="app_name">FinalProject</string>
    <string name="email_or_username">Email Or Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="title_1">Tiltle</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="choose_number_of_questions">Choose Number Of Questions</string>
    <string name="normal">5</string>
    <string name="hard">10</string>
    <string name="extreme">15</string>
</resources>